--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mukund's Periodic Table- HTML/CSS</title>
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
-
+  <link href="css/fullscreen.js">
 </head>
 <body>
 <!-- partial:index.partial.html -->
