--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <title>Mukund's Periodic Table</title>
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link href="css/fullscreen.js">
+
 </head>
 <body>
+<script>
+  document.documentElement.requestFullscreen();
+</script>
 <!-- partial:index.partial.html -->
 <!-- ELEMENT MIXIN TEMPLATE-->
 <!-- PLACEHOLDER MIXIN TEMPLATE-->
